WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235842
Web Inspector: [Cocoa] Crash in WebKit::WebInspectorUIProxy::attachmentViewDidChange
https://bugs.webkit.org/show_bug.cgi?id=235842
Summary
Web Inspector: [Cocoa] Crash in WebKit::WebInspectorUIProxy::attachmentViewDi...
Patrick Angle
Reported
2022-01-28 16:55:32 PST
<
rdar://86950638
>
Attachments
Patch v1.0
(2.47 KB, patch)
2022-01-28 17:18 PST
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2022-01-28 17:18:58 PST
Created
attachment 450293
[details]
Patch v1.0
EWS
Comment 2
2022-01-31 15:05:21 PST
Committed
r288848
(
246609@main
): <
https://commits.webkit.org/246609@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450293
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug